--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dependencies": {
         "@ant-design/charts": "^2.2.1",
         "@ant-design/icons": "5.0.1",
+        "@emoji-mart/data": "^1.2.1",
+        "@emoji-mart/react": "^1.1.1",
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^6.1.5",
         "@mui/material": "^6.1.6",
         "@reduxjs/toolkit": "1.9.3",
         "@stomp/stompjs": "^7.0.0",
+        "@tailwindcss/vite": "^4.0.9",
         "antd": "^5.21.4",
         "antd-style": "^3.7.1",
         "async-mutex": "^0.5.0",
@@ -38,20 +41,26 @@
         "react-redux": "8.0.5",
         "react-router-dom": "6.9.0",
         "react-spinners": "0.13.8",
+        "react-use-draggable-scroll": "^0.4.7",
         "reactstrap": "^9.2.3",
         "redux-persist": "^6.0.0",
         "sass": "^1.77.8",
         "socket.io-client": "^4.8.1",
         "sockjs-client": "^1.6.1",
         "stompjs": "^2.3.3",
-        "swiper": "^11.1.14"
+        "swiper": "^11.2.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
+        "@tailwindcss/postcss": "^4.0.9",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/swiper": "^6.0.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
+        "autoprefixer": "^10.4.20",
         "globals": "^15.9.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.0.9",
         "vite": "^5.4.9"
     }
 }
