--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
     },
     "dependencies": {
         "@ant-design/icons": "5.0.1",
+        "@coreui/chartjs": "^4.1.0",
+        "@coreui/coreui": "^5.3.1",
+        "@coreui/icons": "^3.0.1",
+        "@coreui/icons-react": "^2.3.0",
+        "@coreui/react": "^5.5.0",
+        "@coreui/react-chartjs": "^3.0.0",
+        "@coreui/utils": "^2.0.2",
         "@emoji-mart/data": "^1.2.1",
         "@emoji-mart/react": "^1.1.1",
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
         "@mui/icons-material": "^6.1.5",
         "@mui/material": "^6.1.6",
-        "@reduxjs/toolkit": "1.9.3",
+        "@popperjs/core": "^2.11.8",
+        "@reduxjs/toolkit": "^2.6.1",
         "@stomp/stompjs": "^7.0.0",
         "@tailwindcss/vite": "^4.0.9",
         "antd": "^5.21.4",
@@ -25,6 +33,9 @@
         "async-mutex": "^0.5.0",
         "axios": "^1.7.7",
         "bootstrap": "^5.3.3",
+        "chart.js": "^4.4.7",
+        "classnames": "^2.5.1",
+        "core-js": "^3.40.0",
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
         "file-saver": "^2.0.5",
@@ -33,17 +44,20 @@
         "i18next-http-backend": "^3.0.2",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^15.4.1",
         "react-icons": "^5.3.0",
-        "react-redux": "8.0.5",
+        "react-redux": "^9.2.0",
         "react-router-dom": "6.9.0",
         "react-spinners": "0.13.8",
         "react-use-draggable-scroll": "^0.4.7",
         "reactstrap": "^9.2.3",
+        "redux": "5.0.1",
         "redux-persist": "^6.0.0",
         "sass": "^1.77.8",
+        "simplebar-react": "^3.3.0",
         "socket.io-client": "^4.8.1",
         "sockjs-client": "^1.6.1",
         "stompjs": "^2.3.3",
@@ -55,10 +69,17 @@
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/swiper": "^6.0.0",
+        "@vitejs/plugin-react": "^4.3.4",
         "@vitejs/plugin-react-swc": "^3.5.0",
         "autoprefixer": "^10.4.20",
+        "eslint": "^9.20.1",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-prettier": "^5.2.3",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.1.0",
         "globals": "^15.9.0",
         "postcss": "^8.5.3",
+        "prettier": "3.5.1",
         "tailwindcss": "^4.0.9",
         "vite": "^6.2.1"
     }
