--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "compilerOptions": {
         "moduleResolution": "node",
-        "noEmit": true
+        "noEmit": true,
+        "jsx": "react-jsx", 
+        "allowJs": true
     },
     "files": [],
     "references": [
