--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
         "bootstrap": "^5.3.3",
         "chart.js": "^4.4.7",
         "classnames": "^2.5.1",
-        "core-js": "^3.40.0",
+        "core-js": "^3.41.0",
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
+        "emoji-mart": "^5.6.0",
         "file-saver": "^2.0.5",
         "i18next": "^24.2.2",
         "i18next-browser-languagedetector": "^8.0.4",
