--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "dependencies": {
         "@ant-design/charts": "^1.4.3",
-        "@ant-design/icons": "5.0.1",
+        "@ant-design/icons": "^4.8.3",
         "@coreui/chartjs": "^4.1.0",
         "@coreui/coreui": "^5.3.1",
         "@coreui/icons": "^3.0.1",
@@ -29,6 +29,7 @@
         "@reduxjs/toolkit": "^2.6.1",
         "@stomp/stompjs": "^7.1.0",
         "@tailwindcss/vite": "^4.0.9",
+        "@zegocloud/zego-uikit-prebuilt": "^2.14.3-beta",
         "antd": "^5.21.4",
         "antd-style": "^3.7.1",
         "async-mutex": "^0.5.0",
@@ -62,13 +63,15 @@
         "simplebar-react": "^3.3.0",
         "sockjs-client": "^1.6.1",
         "stompjs": "^2.3.3",
-        "swiper": "^11.2.4"
+        "swiper": "^11.2.4",
+        "zego-express-engine-webrtc": "^3.8.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
         "@tailwindcss/postcss": "^4.0.9",
         "@types/react": "^18.3.20",
         "@types/react-dom": "^18.3.5",
+        "@types/sockjs-client": "^1.5.4",
         "@types/swiper": "^6.0.0",
         "@vitejs/plugin-react": "^4.3.4",
         "@vitejs/plugin-react-swc": "^3.5.0",
