--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "i18next": "^24.2.2",
         "i18next-browser-languagedetector": "^8.0.4",
         "i18next-http-backend": "^3.0.2",
+        "jwt-decode": "^4.0.0",
         "lodash": "^4.17.21",
         "moment": "^2.30.1",
         "prop-types": "^15.8.1",
