--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "dayjs": "^1.11.13",
         "emoji-mart": "^5.6.0",
         "file-saver": "^2.0.5",
+        "framer-motion": "^12.6.3",
         "i18next": "^24.2.2",
         "i18next-browser-languagedetector": "^8.0.4",
         "i18next-http-backend": "^3.0.2",
