--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@ant-design/charts": "^1.4.3",
         "@ant-design/icons": "5.0.1",
+        "@ant-design/plots": "^2.3.3",
         "@coreui/chartjs": "^4.1.0",
         "@coreui/coreui": "^5.3.1",
         "@coreui/icons": "^3.0.1",
@@ -50,6 +51,7 @@
         "i18next-http-backend": "^3.0.2",
         "jwt-decode": "^4.0.0",
         "lodash": "^4.17.21",
+        "lucide-react": "^0.487.0",
         "moment": "^2.30.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
