--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@ant-design/charts": "^1.4.3",
+        "@ant-design/charts": "^2.2.7",
         "@ant-design/icons": "5.0.1",
         "@ant-design/plots": "^2.3.3",
+        "@antv/g2plot": "^2.4.33",
         "@coreui/chartjs": "^4.1.0",
         "@coreui/coreui": "^5.3.1",
         "@coreui/icons": "^3.0.1",
@@ -45,7 +46,7 @@
         "dayjs": "^1.11.13",
         "emoji-mart": "^5.6.0",
         "file-saver": "^2.0.5",
-        "framer-motion": "^12.6.3",
+        "framer-motion": "^12.6.5",
         "i18next": "^24.2.2",
         "i18next-browser-languagedetector": "^8.0.4",
         "i18next-http-backend": "^3.0.2",
